--- a/pages/cases.html
+++ b/pages/cases.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cases de Sucesso - App5M Desenvolvimento</title>
+    <title>Cases de Sucesso - InsideTec Desenvolvimento</title>
     <meta name="description" content="Conheça os cases de sucesso da App5M. Projetos desenvolvidos com qualidade e resultados comprovados.">
     <meta name="keywords" content="cases de sucesso, projetos app5m, aplicativos desenvolvidos, startups, porto alegre">
     
@@ -39,10 +39,10 @@
                         <a class="nav-link" href="about.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="delivery.html">App5M Delivery</a>
+                    <!--    <a class="nav-link" href="delivery.html">App5M Delivery</a> -->
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="cases.html">Cases</a>
+                       <a class="nav-link active" href="cases.html">Cases</a> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#contact">Contato</a>
@@ -101,7 +101,7 @@
                                     <span class="tag">Mobile</span>
                                 </div>
                                 <div class="case-info">
-                                    <small class="text-muted">App5M Tecnologia & Marketing</small>
+                                    <small class="text-muted">InsideTec Tecnologia & Marketing</small>
                                     <div class="case-stats">
                                         <span><i class="fas fa-download"></i> 10k+ downloads</span>
                                         <span><i class="fas fa-star"></i> 4.8/5</span>
@@ -120,19 +120,21 @@
                                 </div>
                             </div>
                             <div class="case-content">
-                                <h4>Nettuno Trader & Kick Soccer Coin</h4>
-                                <p class="case-subtitle">Projeto de criptomoedas</p>
-                                <p class="case-description">Plataforma inovadora para trading de criptomoedas com foco em tokens esportivos, revolucionando o mercado de investimentos digitais.</p>
+                                <h4>Tabelas de estoque</h4>
+                                <p class="case-subtitle">Mantenha seu estoque na palma da mão.</p>
+                                <p class="case-description">Sistema desenvolvido especialmente para
+                                gerenciar o estoque de seu negócio. Adicionando todas as ferramentas 
+                            necessárias.</p>
                                 <div class="case-tags">
-                                    <span class="tag">Blockchain</span>
-                                    <span class="tag">Cryptocurrency</span>
-                                    <span class="tag">Trading</span>
+                                    <span class="tag">Php</span>
+                                    <span class="tag">Json</span>
+                                    <span class="tag">Tailwindcss</span>
                                 </div>
                                 <div class="case-info">
-                                    <small class="text-muted">App5M Tecnologia & Marketing</small>
+                                    <small class="text-muted">InsideTec Tecnologia & Marketing</small>
                                     <div class="case-stats">
                                         <span><i class="fas fa-users"></i> 5k+ usuários</span>
-                                        <span><i class="fas fa-chart-line"></i> +300% ROI</span>
+                                       <!-- <span><i class="fas fa-chart-line"></i> +300% ROI</span>-->
                                     </div>
                                 </div>
                             </div>
@@ -148,16 +150,16 @@
                                 </div>
                             </div>
                             <div class="case-content">
-                                <h4>Vecell Card</h4>
-                                <p class="case-subtitle">Administradora de Cartões</p>
-                                <p class="case-description">Sistema completo para administração de cartões de crédito e débito, com funcionalidades avançadas de gestão e controle financeiro.</p>
+                                <h4>Segurança privada</h4>
+                                <p class="case-subtitle">Segurança patrimonial</p>
+                                <p class="case-description">Web site destinado a contratções de serviços para segurança pessoal e empresarial. Desde vigias até mesmo serviços gerais.</p>
                                 <div class="case-tags">
-                                    <span class="tag">Fintech</span>
-                                    <span class="tag">Cartões</span>
+                                    <span class="tag">Segurança</span>
+                                    <span class="tag">Agência</span>
                                     <span class="tag">Sistema</span>
                                 </div>
                                 <div class="case-info">
-                                    <small class="text-muted">App5M Tecnologia & Marketing</small>
+                                    <small class="text-muted">InsideTec Tecnologia & Marketing</small>
                                     <div class="case-stats">
                                         <span><i class="fas fa-credit-card"></i> 50k+ cartões</span>
                                         <span><i class="fas fa-shield-alt"></i> 99.9% segurança</span>
@@ -217,26 +219,26 @@
                                     <i class="fab fa-bitcoin fa-2x"></i>
                                 </div>
                                 <div class="case-title">
-                                    <h4>Nettuno Trader</h4>
-                                    <p class="text-muted">Plataforma de Trading de Criptomoedas</p>
+                                    <h4>Tabelas de estoque</h4>
+                                    <p class="text-muted">Mantenha seu estoque na palma da mão.</p>
                                 </div>
                             </div>
                             <div class="case-details">
-                                <p><strong>Desafio:</strong> Criar uma plataforma segura e intuitiva para trading de criptomoedas com foco em tokens esportivos.</p>
-                                <p><strong>Solução:</strong> Desenvolvemos uma plataforma web completa com gráficos em tempo real, carteira digital e sistema de trading automatizado.</p>
+                                <p><strong>Desafio:</strong> Criar uma plataforma segura e intuitiva para adicionar e gerenciar cada passo do estoque, desde alertas do estqoue baixo por item até mesmo por notificação.</p>
+                                <p><strong>Solução:</strong> Desenvolvemos uma plataforma web completa com gráficos em tempo real. Adicionando dois usuários "Administrator e Operador".</p>
                                 <p><strong>Resultados:</strong></p>
                                 <ul>
-                                    <li>5.000+ usuários ativos</li>
-                                    <li>R$ 10M+ em volume de negociação</li>
-                                    <li>300% de ROI para investidores iniciais</li>
-                                    <li>Integração com 15+ exchanges</li>
+                                    <li>Redução de Erros Humanos</li>
+                                    <li>Agilidade nos Processos</li>
+                                    <li>Melhora no Fluxo de Trabalho</li>
+                                    <li>Prevenção de Perdas por Falta de Estoque</li>
                                 </ul>
                                 <div class="technologies">
                                     <strong>Tecnologias:</strong>
-                                    <span class="tech-badge">React</span>
-                                    <span class="tech-badge">Python</span>
-                                    <span class="tech-badge">PostgreSQL</span>
-                                    <span class="tech-badge">Blockchain</span>
+                                    <span class="tech-badge">Php</span>
+                                    <span class="tech-badge">Json</span>
+                                    <span class="tech-badge">MySQL</span>
+                                    <span class="tech-badge">Tailwindcss</span>
                                 </div>
                             </div>
                         </div>
@@ -250,19 +252,19 @@
                                     <i class="fas fa-credit-card fa-2x"></i>
                                 </div>
                                 <div class="case-title">
-                                    <h4>Vecell Card</h4>
-                                    <p class="text-muted">Sistema de Administração de Cartões</p>
+                                    <h4>Segurança privada</h4>
+                                    <p class="text-muted">Segurança patrimonial</p>
                                 </div>
                             </div>
                             <div class="case-details">
-                                <p><strong>Desafio:</strong> Desenvolver um sistema completo para administração de cartões de crédito e débito com alta segurança.</p>
-                                <p><strong>Solução:</strong> Criamos um sistema robusto com dashboard administrativo, controle de transações e módulo de segurança avançado.</p>
+                                <p><strong>Desafio:</strong> Desenvolver um sistema completo para apresentação de serviços e contratação de vigias, serviços gerais e porteiros.</p>
+                                <p><strong>Solução:</strong> Criamos um sistema robusto com imagens e apresentação do trabalho contendo as informações necessárias para dúvidas.</p>
                                 <p><strong>Resultados:</strong></p>
                                 <ul>
-                                    <li>50.000+ cartões administrados</li>
-                                    <li>99.9% de uptime do sistema</li>
-                                    <li>Zero fraudes detectadas</li>
-                                    <li>Redução de 60% nos custos operacionais</li>
+                                    <li>Transmissão de Confiança e Transparência</li>
+                                    <li>Diferencial Competitivo</li>
+                                    <li>Construção de uma Marca Sólida</li>
+                                    <li>Captação de Clientes 24/7</li>
                                 </ul>
                                 <div class="technologies">
                                     <strong>Tecnologias:</strong>
@@ -283,26 +285,26 @@
                                     <i class="fas fa-utensils fa-2x"></i>
                                 </div>
                                 <div class="case-title">
-                                    <h4>App5M Delivery</h4>
-                                    <p class="text-muted">Plataforma de Delivery Completa</p>
+                                    <h4>Inteligências artificiais</h4>
+                                    <p class="text-muted">IA´s robustas para qualquer segmento.</p>
                                 </div>
                             </div>
                             <div class="case-details">
-                                <p><strong>Desafio:</strong> Criar uma plataforma completa de delivery que atenda restaurantes, lanchonetes e estabelecimentos alimentícios.</p>
-                                <p><strong>Solução:</strong> Desenvolvemos um ecossistema completo com app para clientes, painel administrativo e sistema de gestão de entregas.</p>
+                                <p><strong>Desafio:</strong> Criar uma inteligência artificial capaz de desenvolver suas próprias capacidades em tempo real. Ter o resultado em imediato assim que o cliente pedir</p>
+                                <p><strong>Solução:</strong> Desenvolvemos um IA capaz de pensar por si só, gerando resultados significativos para empresas de administração, gestão de negocios entre outras.</p>
                                 <p><strong>Resultados:</strong></p>
                                 <ul>
-                                    <li>200+ estabelecimentos cadastrados</li>
-                                    <li>1.000+ pedidos diários</li>
-                                    <li>Aumento de 400% no faturamento dos parceiros</li>
-                                    <li>Tempo médio de entrega: 35 minutos</li>
+                                    <li>Análises Preditivas em Tempo Real</li>
+                                    <li>Geração de Cenários Estratégicos Sob Demanda</li>
+                                    <li>dentificação de Oportunidades Ocultas</li>
+                                    <li>Automação de Processos de Negócio Complexos</li>
                                 </ul>
                                 <div class="technologies">
                                     <strong>Tecnologias:</strong>
-                                    <span class="tech-badge">React Native</span>
-                                    <span class="tech-badge">Laravel</span>
-                                    <span class="tech-badge">MySQL</span>
-                                    <span class="tech-badge">Google Maps API</span>
+                                    <span class="tech-badge">Python</span>
+                                    <span class="tech-badge">Flask</span>
+                                    <span class="tech-badge">HTML/CSS/JavaScript</span>
+                                    <span class="tech-badge">MongoDb</span>
                                 </div>
                             </div>
                         </div>
@@ -320,7 +322,7 @@
                     <div class="col-lg-4">
                         <div class="testimonial-card">
                             <div class="testimonial-content">
-                                <p>"A App5M transformou nossa ideia em realidade. O aplicativo do Tele Mercado superou todas as nossas expectativas e os resultados foram fantásticos."</p>
+                                <p>"A InsideTec transformou nossa ideia em realidade. O aplicativo do Tele Mercado superou todas as nossas expectativas e os resultados foram fantásticos."</p>
                             </div>
                             <div class="testimonial-author">
                                 <div class="author-avatar">
@@ -344,15 +346,15 @@
                     <div class="col-lg-4">
                         <div class="testimonial-card">
                             <div class="testimonial-content">
-                                <p>"Profissionais extremamente competentes. O sistema do Vecell Card é robusto, seguro e atende perfeitamente às nossas necessidades."</p>
+                                <p>"Profissionais extremamente competentes. O sistema Tabelas de estoque é robusto, seguro e atende perfeitamente às nossas necessidades. Hoje minha franquia até trabalha com eles para manter tudo em ordem."</p>
                             </div>
                             <div class="testimonial-author">
                                 <div class="author-avatar">
                                     <i class="fas fa-user fa-2x"></i>
                                 </div>
                                 <div class="author-info">
-                                    <h5>Maria Santos</h5>
-                                    <p>Diretora, Vecell Card</p>
+                                    <h5>Pedro alves</h5>
+                                    <p>Sócio operador restaurante</p>
                                 </div>
                             </div>
                             <div class="testimonial-rating">
@@ -368,7 +370,7 @@
                     <div class="col-lg-4">
                         <div class="testimonial-card">
                             <div class="testimonial-content">
-                                <p>"A plataforma de trading desenvolvida pela App5M é incrível. Interface intuitiva e funcionalidades avançadas que nos destacam no mercado."</p>
+                                <p>"A Inteligências artificiais desenvolvida pela InsideTec é incrível. Interface intuitiva e funcionalidades avançadas que nos destacam no mercado."</p>
                             </div>
                             <div class="testimonial-author">
                                 <div class="author-avatar">
@@ -376,7 +378,7 @@
                                 </div>
                                 <div class="author-info">
                                     <h5>Carlos Oliveira</h5>
-                                    <p>CTO, Nettuno Trader</p>
+                                    <p>Gerente operacional</p>
                                 </div>
                             </div>
                             <div class="testimonial-rating">
@@ -450,7 +452,7 @@
                         <p class="lead mb-4">Entre em contato conosco e vamos criar algo incrível juntos.</p>
                         <div class="cta-buttons">
                             <a href="../index.html#contact" class="btn btn-primary btn-lg me-3">Iniciar Projeto</a>
-                            <a href="https://startups.app5m.com.br/" class="btn btn-outline-light btn-lg" target="_blank">Ver Mais Startups</a>
+                           <!-- <a href="#" class="btn btn-outline-light btn-lg" target="_blank">Ver Mais Startups</a> -->
                         </div>
                     </div>
                 </div>
@@ -463,7 +465,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>&copy; 2025 App5M - Desenvolvimento de Aplicativos. Todos os direitos reservados.</p>
+                    <p>&copy; 2025 InsideTec - Desenvolvimento de Aplicativos. Todos os direitos reservados.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
                     <a href="../index.html#contact" class="text-light me-3">Contato</a>
