--- a/pages/services.html
+++ b/pages/services.html
@@ -39,10 +39,10 @@
                         <a class="nav-link" href="about.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="delivery.html">Seu app de Delivery</a>
+                      <!--  <a class="nav-link" href="delivery.html">Seu app de Delivery</a> -->
                     </li>
                     <li class="nav-item">
-                       <!-- <a class="nav-link" href="cases.html">Cases</a> -->
+                        <a class="nav-link" href="cases.html">Cases</a> 
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#contact">Contato</a>
