--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ $csrf_token = $_SESSION['csrf_token'];
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>InsideTec - Desenvolvimento de Aplicativos Gramado/RS</title>
     <meta name="description" content="Criação de apps, lojas virtuais, desenvolvimento de aplicativos em Gramado. Aplicativos nativos para Android e iOS.">
-    <meta name="keywords" content="criação de apps, criação de aplicativos, lojas virtuais, desenvolvimento de aplicativos, aplicativos, aplicativos móveis, android, ios, windows phone, poa, rs">
+    <meta name="keywords" content="criação de apps, criação de aplicativos, lojas virtuais, desenvolvimento de aplicativos, aplicativos, aplicativos móveis, android, ios, windows phone, Gramado, rs">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -229,7 +229,7 @@ $csrf_token = $_SESSION['csrf_token'];
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <h2 class="mb-4">A InsideTec - Desenvolvimento de Aplicativos POA/RS</h2>
+                        <h2 class="mb-4">A InsideTec - Desenvolvimento de Aplicativos Gramado/RS</h2>
                         <p class="lead mb-4">A InsideTec tem como principal objetivo levar sua empresa para o smartphone do público em geral.</p>
                         <p class="mb-4">Hoje são raros os momentos que não podemos observar alguém utilizando um smartphone ou tablet, seja na rua, restaurantes, bares, festas, etc. Segundo estudos o celular é o principal meio de acesso à internet no Brasil e uma parcela dos brasileiros teve seu primeiro acesso através de um smartphone ou outro dispositivo móvel.</p>
                         
